CHANGES IN VERSION 1.17
-----------------------

NEW FEATURES

    o (1.17.18) Update devel to use BiocManager instructions instead of
    BiocInstaller

    o (1.17.17) Add a new function that can be run interactive or command line
    BiocCheckGitClone which is only run on a source directory not a
    tarball. This will check for bad system files

    o (1.17.17) BiocCheck addition: Checks vignette directory for intermediate
    and end files that should not be included.

    o (1.17.16) Checks for Bioconductor package size requirement if checking
    tarball

BUG FIXES

    o (1.17.19) Updated internal functions to use BiocManger instead of
    BiocInstaller

CHANGES IN VERSION 1.16
-----------------------

BUG FIXES

    o handle interactive BiocCheck() arguments correctly

CHANGES IN VERSION 1.14
-----------------------

NEW FEATURES

    o NOTE when maintainer subscription to bioc-devel mailing list
      cannot be checked (checking requires mailing list admin
      password).

BUG FIXES

    o Use shell quotes to allow spaces in package paths