@@ -1,5 +1,5 @@
 Package: BiocCheck
-Version: 1.17.20
+Version: 1.17.21
 Title: Bioconductor-specific package checks
 Description: Executes Bioconductor-specific package checks.
 Authors@R: c(
