@@ -13,4 +13,5 @@ importFrom(knitr, purl)
 export(BiocCheck)
 export(BiocCheckGitClone)
 export(usage)
+export(usage2)
 export(.error, .warning, .note)
